styles/styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* CSS RESET END  -------------------------------------------------------- */

/* Code Start------------------------------------------------------------- */

/* Font imports */
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500&display=swap');
/* Colour pallet Preset */
:root{
    --dark-bg: #1b0b26;
    --light-bg: #eceaf9;
    --vibrant:#8B88F2;
	--spacing10between: .625em;
	--spacing20mobile: 1.25em;
	--spacing40web: 2.5em;
}
/* Default Content Styling */
body{
    background-color: var(--light-bg);
	margin: 0 auto;
}
/* Defining font size properties */
h1{
    color: var(--dark-bg);
	font-size: 2.5em;
	font-family: 'Bebas Neue', cursive;
}
h2{
	color:var(--dark-bg);
	font-size: 2em;
	font-family: 'Bebas Neue', cursive;
}
h3{
	color:var(--dark-bg);
	font-size: 1.5em;
	font-family: 'Teko', sans-serif;
}
p{
	font-family:'Ropa Sans', sans-serif;
}
img{
	max-width: 100%;
}
.fullwidth, .fullwidth img{
	width:100%;
}
a{	
	color: var(--light-bg);
	font-family: 'Bebas Neue', cursive;
	text-decoration: none;
}
i{
	color: var(--light-bg);
}
/* Button styling */
button{
	background-color: var(--dark-bg);
	font-family:'Bebas Neue', cursive;
	color: var(--light-bg);
	border: none;
	font-size: 2.5em;
	padding: var(--spacing10between);
}
/* Class specific CSS */
.vibrant{
	background-color: var(--vibrant);
}
.centre{
	text-align: center;
}
.light{
	color: var(--light-bg);
}
/* "button" placeholder style */
.link{
	background-color: var(--dark-bg);
	color: var(--light-bg);
}
/* Header properties */
header{
	background-color: var(--dark-bg);
	display: flex;
	justify-content: space-between;
	padding: var(--spacing10between);
}
.logo{
	padding-right: var(--spacing10between);
	padding-left: var(--spacingtwenty);
}
span{
	display: flex;
	align-items: center;
}
/* Default consistent spacing and padding for content */
article{
	padding: var(--spacing20mobile);
}
.space{
	padding: var(--spacing20mobile);
}
/* footer defaults */
footer{
	background-color: var(--dark-bg);
}
/* footer element items */
footer nav a{
	font-family:'Ropa Sans', sans-serif;
}
/* Tablet media quiery */

@media screen and (min-width:480px) and (max-width:960px){


}
/* Desktop media quiery */

@media screen and (min-width:960px){
.container{
	/* Fixed width for tablet */
	width: 1920px;
	padding-left: 0;
	padding-right: 0;
	margin: 0 auto;

}
}


/* Tester content */
/* Testing dropdown CSS------------------------------------------ */
/* button style */
/* .drop{
	background-color: var(--dark-bg);
	color: var(--light-bg);
	font-family:'Bebas Neue', cursive;
	padding:var(--spacing10between);
} */

/* container position*/
/* .dropdown{
	position:relative;
	display: inline-block;
}
.dropdown-content{
	display:none;
	position:absolute;
	background-color: var(--dark-bg);
	min-width: 3em;
	/* placing the menu infront of other items */
	/* z-index: 1;
} */ 
/* links from the content */
/* .dropdown-content{
	color:var(--light-bg);
	padding: var(--spacingtwenty);
	box-shadow: 0px 2px 10px 0px var(--dark-bg);
	display: block;
} */
/* When hovered */
/* .dropdown-content a:hover{
	color: var(--dark-bg);
	background-color: var(--light-bg);
}
.show{
	display: block;
} */
/* <!-- based on code from W3 schools -->
<!-- <nav class="dropdown">
  <button onclick="myFunction()" class="drop">Home</button>
<div id="myDropdown" class="dropdown-content">
  <a href="index.html">Home</a>
  <a href="about.html">About</a>
  <a href="portfolio.html">Portfolio</a>
  <a href="contact.html">Contact</a>
  <a href="faq.html">FAQ</a>
  <a href="terms_and_conditions.html">Terms and Conditions</a>
  </div>
</nav>   -->
  <!--JS for dropdown  -->
  <!-- <script>
	/* When the user clicks on the button, 
	toggle between hiding and showing the dropdown content */
	/* function myFunction() {
	  document.getElementById("myDropdown").classList.toggle("show");
	}
	
	// Close the dropdown if the user clicks outside of it
	window.onclick = function(event) {
	  if (!event.target.matches('.drop')) {
		var dropdowns = document.getElementsByClassName("dropdown-content");
		var i;
		for (i = 0; i < dropdowns.length; i++) {
		  var openDropdown = dropdowns[i];
		  if (openDropdown.classList.contains('show')) {
			openDropdown.classList.remove('show');
		  }
		}
	  }
	} -->
	<!-- </script> -->
	<!-- js end --> */ 

